[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "webpy"
version = "0.1"
authors = [
  { name="justicepy", email="saicoder27@gmail.com" },
]
description = "Send webhooks easily with WebPy!"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]